cmake_minimum_required(VERSION 3.1)

project(Cpp.Core)
add_subdirectory(Abstract)
add_subdirectory(Action)
add_subdirectory(Action1)
add_subdirectory(Action2)
add_subdirectory(Action3)
add_subdirectory(Any)
add_subdirectory(Auto)
add_subdirectory(Console)
add_subdirectory(ConsoleColor)
add_subdirectory(DateTime)
add_subdirectory(ExceptionPointer)
add_subdirectory(HelloWorld)
add_subdirectory(Png)
add_subdirectory(StringConversion)
add_subdirectory(StringSplit)
add_subdirectory(StringSplitWithRegex)
add_subdirectory(StringUnicode)
add_subdirectory(StringUnicode2)
add_subdirectory(Test)
