cmake_minimum_required(VERSION 3.0)
project(Cpp.Src.Examples)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

if (NOT EXECUTABLE_OUTPUT_PATH)
  if ("${CMAKE_BUILD_TYPE}" STREQUAL "")
    set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
  else()
    set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/${CMAKE_BUILD_TYPE})
  endif()
endif()

file(GLOB SUBDIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
foreach (SUBDIR ${SUBDIRS})
  if (IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${SUBDIR} AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${SUBDIR}/CMakeLists.txt")
    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/${SUBDIR}")
    set_target_properties(${SUBDIR} PROPERTIES FOLDER Cpp.Examples)
  endif ()
endforeach ()
