cmake_minimum_required(VERSION 3.0)
project(Action3)

if (MSVC)
elseif (APPLE)
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -framework Cocoa")
else(UNIX)
  find_path(GTKMM_INCLUDE_DIRS gtkmm.h)
  find_library(GTKMM_LIBRARY gtkmm-3.0)
  include_directories(${GTKMM_INCLUDE_DIRS})
  link_directories(${GTKMM_LIBRARY_DIRS})
  link_libraries(${GTKMM_LIBRARIES})
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(Action3 Action3.cpp MessageBox.h MessageBoxA.mm MessageBoxL.cpp MessageBoxW.cpp)
